# occt-native

./: CLAUDE.md  CMakeLists.txt  COMPARISON_ANALYSIS.md  FIX_PLAN.md  vcpkg.json
.claude/rules/: ci-rules.md  sensor-rules.md
.claude/skills/occt-dev/: SKILL.md  checklist.md
.github/workflows/: build-windows.yml  build.yml  cpu-deep-test.yml  gui-smoke-test.yml  windows-test.yml
docs/: CODE_STRUCTURE.md  OCCT-COMPARISON-ANALYSIS.md
scripts/: package-portable.ps1
src/cli/: CMakeLists.txt  cli_args.cpp  cli_args.h  cli_runner.cpp  cli_runner.h
src/engines/: CMakeLists.txt  base_engine.h  cpu_engine.cpp  cpu_engine.h  engine_placeholder.cpp  gpu_engine.cpp  gpu_engine.h  psu_engine.cpp  psu_engine.h  ram_engine.cpp  ram_engine.h  storage_engine.cpp  storage_engine.h
src/engines/benchmark/: cache_benchmark.cpp  memory_benchmark.cpp
src/engines/cpu/: avx_stress.cpp  avx_stress.h  prime.cpp  prime.h
src/engines/gpu/: artifact_detector.cpp  opencl_backend.h  (+3 more)
src/gui/: CMakeLists.txt  main_window.cpp  main_window.h
src/monitor/: lhm_bridge.cpp  lhm_bridge.h  monitor_placeholder.cpp  sensor_manager.cpp  sensor_manager.h  system_info.cpp  whea_monitor.cpp
src/report/: CMakeLists.txt  csv_exporter.cpp  html_report.cpp  report_manager.cpp  report_manager.h
src/safety/: CMakeLists.txt  guardian.cpp  guardian.h  safety_placeholder.cpp
src/scheduler/: preset_schedules.cpp  test_scheduler.cpp
src/utils/: CMakeLists.txt  app_config.cpp  app_config.h  cpuid.cpp  cpuid.h  file_logger.cpp  gpu_info.cpp  utils_placeholder.cpp
tools/lhm-sensor-reader/: Program.cs
(+26 files in other folders)
